exports[`Grid renders correctly given a set of tiles 1`] = `
<div
  className="sc-bwzfXH jBBIHp">
  <div
    className="tiles">
    <div
      className="sc-bdVaJa dCnBtY tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        4
      </span>
    </div>
    <div
      className="sc-bdVaJa hxXGJF tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        2
      </span>
    </div>
    <div
      className="sc-bdVaJa cAoXsk tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        3
      </span>
    </div>
    <div
      className="sc-bdVaJa jNWdwj tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        1
      </span>
    </div>
  </div>
</div>
`;

exports[`Grid renders correctly given an empty set of tiles 1`] = `
<div
  className="sc-bwzfXH iPaWuQ">
  <div
    className="tiles" />
</div>
`;

exports[`Grid renders correctly given one tile 1`] = `
<div
  className="sc-bwzfXH jBBIHp">
  <div
    className="tiles">
    <div
      className="sc-bdVaJa dBwUXj tile-invisible"
      onClick={[Function]}>
      <span
        className="tile-number">
        0
      </span>
    </div>
  </div>
</div>
`;
